# trying_a_model_with_sar

./: .gitignore  README.md  infer.py  inference.py  main.py  model_artifact.py  pyproject.toml  requirements.txt  sar_vit_water_segmentation.py
UNet/: README (1).md  trial_unet.ipynb
ViT_1/: CODE_EXPLANATION.md  sar_vit_water_segmentation.py  trial.ipynb
ViT_2/: trial_vit.ipynb
notebook/: README.md  trial_vit.ipynb
notebook/multi_dataset/: CONFIGURATION_GUIDE.md  sar_water_multi_dataset_training.ipynb
src/: inference.py  shapefile_utils.py
