[project]
name = "sar-model-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "numpy>=2.4.4",
    "rasterio>=1.5.0",
    "ruff>=0.15.11",
    "scikit-image>=0.26.0",
    "torch>=2.11.0",
    "torchgeo>=0.9.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]
